add input restaurant name
