# src/infrastructure/repositories/VideoRepository.ts
@@ -7,9 +7,9 @@ export class VideoRepository implements IVideoRepository {
     async create(video: Video): Promise<Video> {
         const query = `
             INSERT INTO videos (
-                id, user_id, public_id, secure_url, phone_number, 
+                id, user_id, public_id, secure_url, restaurantName, phone_number, 
                 network, invoice_image, status_video, created_at, updated_at
-            ) VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10)
+            ) VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11)
             RETURNING *
         `;
 
@@ -18,6 +18,7 @@ export class VideoRepository implements IVideoRepository {
             video.userId,
             video.publicId,
             video.secureUrl,
+            video.restaurantName,
             video.phoneNumber,
             video.network,
             video.invoiceImage,
@@ -48,6 +49,7 @@ export class VideoRepository implements IVideoRepository {
             userId: row.user_id,
             publicId: row.public_id,
             secureUrl: row.secure_url,
+            restaurantName: row.restaurantName,
             phoneNumber: row.phone_number,
             network: row.network,
             invoiceImage: row.invoice_image,
