# src/presentation/validators/VideoValidators.ts
@@ -18,6 +18,12 @@ export class VideoValidators {
                 .withMessage('Invalid URL format')
                 .isLength({ max: 255 })
                 .withMessage('Secure URL must not exceed 255 characters'),
+                body('restaurantName')
+                .trim()
+                .notEmpty()
+                .withMessage('Name is required')
+                .isLength({ min: 2, max: 100 })
+                .withMessage('Name must be between 2 and 100 characters'),
             body('phoneNumber')
                 .trim()
                 .notEmpty()
